Bug 406832 - Condensed date doesn't work anymore
Summary: Condensed date doesn't work anymore
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: 19.04.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-24 01:05 UTC by Alexander
Modified: 2019-11-03 18:02 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.12.0
Sentry Crash Report:


Attachments
screenshot of the date format with "condensed date" selected (114.03 KB, image/jpeg)
2019-04-24 01:05 UTC, Alexander
Details
screenshot of Dolphin 19.04 on Arch Linux (27.79 KB, image/png)
2019-04-27 12:54 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander 2019-04-24 01:05:52 UTC
Created attachment 119600 [details]
screenshot of the date format with "condensed date" selected

SUMMARY

"Condensed date" format for information panel ceased to work suddenly.
As far as I remember - it worked when I just installed the system from neon-user-20190404-1118.iso, but then stopped. Maybe it happened after a few updates.
The date on the information panel is now in long format only.
Comment 1 Patrick Silva 2019-04-27 12:54:50 UTC
Created attachment 119671 [details]
screenshot of Dolphin 19.04 on Arch Linux

Same thing on my system.
Modification date is correct, but both "Image date time" and "Photo original date time" shows date in long format.
Comment 2 Julian Steinmann 2019-04-27 14:30:00 UTC
Can confirm this issue with Dolphin from Neon unstable. Might be a regression.
Comment 3 Ismael Asensio 2019-08-26 22:07:51 UTC
Proposed diff in https://phabricator.kde.org/D23475
Comment 4 Nate Graham 2019-11-03 18:01:22 UTC
Git commit 407c537ce1c0869c85c342576a79adb2c001d327 by Nate Graham, on behalf of Ismael Asensio.
Committed on 03/11/2019 at 18:01.
Pushed by ngraham into branch 'master'.

[baloo-widgets] Apply condensed date to file metadata properties

Summary:
In the dolphin information panel, the condensed date format was not being applied to metadata file properties (i.e EXIF), only to those related to file itself (modified/accessed/..)

BEFORE:
{F7283072}
AFTER:
{F7283073}

Test Plan:
- Open dolphin information panel and hover an image with EXIF info
- Condensed date option works on all the properties

Reviewers: #dolphin, elvisangelaccio, bruns, meven, ngraham

Reviewed By: #dolphin, meven, ngraham

Subscribers: meven, ngraham, bruns, #baloo

Tags: #baloo, #dolphin

Differential Revision: https://phabricator.kde.org/D23475

M  +34   -20   src/widgetfactory.cpp

https://commits.kde.org/baloo-widgets/407c537ce1c0869c85c342576a79adb2c001d327