[baloo-widgets] Apply condensed date to file metadata properties

Summary:
In the dolphin information panel, the condensed date format was not being applied to metadata file properties (i.e EXIF), only to those related to file itself (modified/accessed/..)

BEFORE:
{F7283072}
AFTER:
{F7283073}

BUG: 406832

Test Plan:
- Open dolphin information panel and hover an image with EXIF info
- Condensed date option works on all the properties

Reviewers: #dolphin, elvisangelaccio, bruns, meven, ngraham

Reviewed By: #dolphin, meven, ngraham

Subscribers: meven, ngraham, bruns, #baloo

Tags: #baloo, #dolphin

Differential Revision: https://phabricator.kde.org/D23475